created imageWidth param to be more accessible in JS. Using maximum width value from openapi instead of hard coded value
