# src/api-routes/persons/{osuId}/images.js
@@ -3,6 +3,9 @@ import sharp from 'sharp';
 import { errorHandler, errorBuilder } from 'errors/errors';
 import { getImageById } from 'db/oracledb/images-dao';
 import { parseQuery } from 'utils/parse-query';
+import { openapi } from 'utils/load-openapi';
+
+const { maximum: maxWidth } = openapi.components.parameters.imageWidth.schema;
 
 /**
  * Get image by ID
@@ -24,8 +27,8 @@ const get = async (req, res) => {
     const sharpImage = sharp(image);
     if (width) {
       result = await sharpImage.resize(width, null).toBuffer();
-    } else if (await sharpImage.metadata().width > 2000) {
-      result = await sharpImage.resize(2000, null).toBuffer();
+    } else if (await sharpImage.metadata().width > maxWidth) {
+      result = await sharpImage.resize(maxWidth, null).toBuffer();
     } else {
       result = image;
     }
